# AxonX

./: .agentignore  .agentrc  .gitignore  Dockerfile  Dockerfile.benchmark  README.md  build_wheel.sh  docker-compose.yml  pyproject.toml
agent/: cli.py  config.py  context_manager.py  router.py  server.py  session.py  watcher.py
agent/agents/: base.py  codeact_agent.py  rag_agent.py
agent/git/: branch_manager.py  commit_writer.py
agent/index/: branch_index.py  faiss_store.py
agent/indexer/: embedder.py  parser.py  skill_writer.py
agent/llm/: claude_provider.py  ollama_provider.py  provider.py  token_counter.py
agent/ui/: diff_renderer.py  plan_renderer.py
axonx/: __init__.py  cli.py  router.py  server.py
axonx/agents/: codeact_agent.py  orchestrator.py  rag_agent.py  version_agent.py
axonx/git/: conflict_resolver.py  undo_redo.py
axonx/index/: graph_store.py  staleness.py
axonx/indexer/: embedder.py  exclusions.py  graph.py  incremental.py  seed.py
axonx/llm/: claude_provider.py  factory.py
axonx/safety/: checkpoint.py  guardrails.py  scope_pin.py
axonx/ui/: chat.py
docs/: architecture.md  benchmarks.md  cli_reference.md  comparison_aider_cline.md  configuration.md  pitch_comparison.md  release_notes_v0.3.0.md  research_paper.md  roadmap_research.md  security_audit.md  vscode_integration.md
scripts/: benchmark_runner.py
tests/: test_agents.py  test_context_store.py  test_git.py  test_indexer.py  test_llm_providers.py  test_router.py
vscode-extension/: .vscodeignore  esbuild.js  install.sh  package.json  tsconfig.json
(+5 files in other folders)
